--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -65,6 +65,13 @@ Ever, if I ruled the world.
 (setq org-startup-folded nil)
 #+END_SRC
 
+*** Configure todo states
+#+BEGIN_SRC emacs-lisp
+(setq org-log-done t)
+(setq org-todo-keywords (quote ((sequence "TODO(t)" "STARTED(s)" "|" "DONE(d!)" )
+                               (sequence "WAITING(w@/!)" "SOMEDAY(S!)" "TESTING(T)" "|" "CANCELLED(c@/!)" ))))
+(setq org-treat-S-cursor-todo-selection-as-state-change nil)
+#+END_SRC
 ** Package stuffs
 *** Set up use-package independently
 #+BEGIN_SRC emacs-lisp
