--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -99,5 +99,29 @@ Ever, if I ruled the world.
             (add-hook 'robe-mode-hook 'ac-robe-setup)))
 #+END_SRC
 
+** General configuration
+
+*** Re-open as sudo
+
+#+BEGIN_SRC emacs-lisp
+(defun sudo-edit (&optional arg)
+  "Edit currently visited file as root.
+
+With a prefix ARG prompt for a file to visit.
+Will also prompt for a file to visit if current
+buffer is not visiting a file."
+  (interactive "P")
+  (if (or arg (not buffer-file-name))
+      (find-file (concat "/sudo:root@localhost:"
+                         (ido-read-file-name "Find file(as root): ")))
+    (find-alternate-file (concat "/sudo:root@localhost:" buffer-file-name))))
+#+END_SRC
+
+*** Bind keys
+
+#+BEGIN_SRC emacs-lisp
+(global-set-key (kbd "C-x C-r") 'sudo-edit)
+#+END_SRC
+
 * Import the config
 <<config>>
