Set up mu4e for gmail

--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -197,5 +197,29 @@ buffer is not visiting a file."
 (global-set-key (kbd "C-x C-r") 'sudo-edit)
 #+END_SRC
 
+** E-mail
+#+BEGIN_SRC emacs-lisp
+(require 'mu4e)
+
+;; don't save message to Sent Messages, Gmail/IMAP takes care of this
+(setq mu4e-sent-messages-behavior 'delete)
+
+(setq mu4e-drafts-folder "/[Gmail].Drafts")
+(setq mu4e-sent-folder   "/[Gmail].Sent Mail")
+(setq mu4e-trash-folder  "/[Gmail].Trash")
+
+;; setup some handy shortcuts
+;; you can quickly switch to your Inbox -- press ``ji''
+;; then, when you want archive some messages, move them to
+;; the 'All Mail' folder by pressing ``ma''.
+(setq mu4e-maildir-shortcuts
+    '( ("/INBOX"               . ?i)
+       ("/[Gmail].Sent Mail"   . ?s)
+       ("/[Gmail].Trash"       . ?t)
+       ("/[Gmail].All Mail"    . ?a)))
+
+;; allow for updating mail using 'U' in the main view:
+(setq mu4e-get-mail-command "offlineimap")
+#+END_SRC
 * Import the config
 <<config>>
