Add web-mode to list of packages

--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -182,6 +182,20 @@ Ever, if I ruled the world.
             (add-hook 'robe-mode-hook 'ac-robe-setup)))
 #+END_SRC
 
+**** HTML
+
+#+BEGIN_SRC emacs-lisp
+
+(use-package web-mode
+  :mode "\\.html$"
+  :bind (("C-c /" . web-mode-element-close))
+  :init
+  (progn (setq web-mode-code-indent-offset 2)
+         (setq web-mode-markup-indent-offset 2)
+         (setq web-mode-css-indent-offset 2)))
+
+#+END_SRC
+
 ** General configuration
 
 *** Re-open as sudo
