use-package for toml files

--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -172,6 +172,13 @@ Ever, if I ruled the world.
   :mode "\\.lua$")
 #+END_SRC
 
+**** TOML
+
+#+BEGIN_SRC emacs-lisp
+(use-package toml-mode
+  :mode "\\.toml$")
+#+END_SRC
+
 **** Ruby
 
 #+BEGIN_SRC emacs-lisp
