--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -136,6 +136,16 @@ Ever, if I ruled the world.
   :bind (("C-x g" . magit-status)))
 #+END_SRC
 
+**** Projectile
+
+#+BEGIN_SRC emacs-lisp
+(use-package projectile
+  :ensure t
+  :bind ("C-c p 1" . projectile-command-map)
+  :config
+(projectile-global-mode +1))
+#+END_SRC
+
 *** Languages
 
 **** Shell
@@ -220,7 +230,6 @@ Ever, if I ruled the world.
 #+END_SRC
 
 ** General configuration
-
 *** Re-open as sudo
 
 #+BEGIN_SRC emacs-lisp
