--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -155,6 +155,14 @@ Ever, if I ruled the world.
 (add-hook 'sh-mode-hook (lambda () (setq sh-basic-offset 2 sh-indentation 2)))
 #+END_SRC
 
+**** Coffeescript
+
+#+BEGIN_SRC emacs-lisp
+(use-package coffee-mode
+  :mode "\\.coffee$"
+  :init (custom-set-variables '(coffee-tab-width 2)))
+#+END_SRC
+
 **** Markdown
 
 #+BEGIN_SRC emacs-lisp
