--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -74,18 +74,9 @@ Ever, if I ruled the world.
 
 ** Org-mode
 
-*** Set up a publishing project
-#+BEGIN_SRC emacs-lisp
-(setq org-publish-project-alist
-      '(("org"
-         :base-directory "~/org/"
-         :publishing-directory "~/public_html"
-         :section-numbers nil
-         :table-of-contents nil
-         :publishing-function org-html-publish-to-html
-         :style "<link rel=\"stylesheet\"
-                href=\"../other/mystyle.css\"
-                type=\"text/css\"/>")))
+*** Use faux-tex super/subscripts
+(setq org-use-sub-superscripts '{})
+(setq org-export-with-sub-superscripts '{})
 #+END_SRC
 
 *** Show expanded
@@ -100,7 +91,28 @@ Ever, if I ruled the world.
                                (sequence "WAITING(w@/!)" "SOMEDAY(S!)" "TESTING(T)" "|" "CANCELLED(c@/!)" ))))
 (setq org-treat-S-cursor-todo-selection-as-state-change nil)
 #+END_SRC
+
+*** Load modules
+#+BEGIN_SRC emacs-lisp
+(add-to-list 'org-modules 'org-habit)
+#+END_SRC
+
+*** Fontify inline
+#+BEGIN_SRC emacs-lisp
+(setq org-src-fontify-natively t)
+#+END_SRC
+
+*** Set up babel languages
+#+BEGIN_SRC emacs-lisp
+(org-babel-do-load-languages 'org-babel-load-languages
+    '(
+        (sh . t)
+    )
+)
+#+END_SRC
+
 ** Package stuffs
+
 *** Set up use-package independently
 #+BEGIN_SRC emacs-lisp
 (unless (package-installed-p 'use-package)
@@ -305,7 +317,7 @@ signalled."
 (global-set-key (kbd "C-c m") 'fc-calculate-region)
 (global-set-key (kbd "<f7>") 'compile)
 #+END_SRC
-*** Version control
+*** Follow symlinks in version control
 #+BEGIN_SRC emacs-lisp
 (setq vc-follow-symlinks t)
 #+END_SRC
