Load py and shell in org-babel

--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -108,6 +108,8 @@ Ever, if I ruled the world.
 (org-babel-do-load-languages 'org-babel-load-languages
     '(
         (sh . t)
+        (shell . t)
+        (python . t)
     )
 )
 #+END_SRC
