--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -93,6 +93,12 @@ Ever, if I ruled the world.
 (setq org-treat-S-cursor-todo-selection-as-state-change nil)
 #+END_SRC
 
+*** Simple capture setup
+#+BEGIN_SRC emacs-lisp
+(setq org-default-notes-file (concat org-directory "/notes.org"))
+(define-key global-map "\C-cc" 'org-capture)
+#+END_SRC
+
 *** Load modules
 #+BEGIN_SRC emacs-lisp
 (add-to-list 'org-modules 'org-habit)
