--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -251,11 +251,8 @@ Ever, if I ruled the world.
 **** Ruby
 
 #+BEGIN_SRC emacs-lisp
-(use-package robe
-     :mode "\\.rb$"
-     :init
-     (progn (add-hook 'ruby-mode-hook 'robe-mode)
-            (add-hook 'robe-mode-hook 'ac-robe-setup)))
+(use-package ruby-mode
+     :mode "\\.rb$")
 #+END_SRC
 
 **** HTML
