Be nice to hosts without elpy

--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -194,8 +194,9 @@ Ever, if I ruled the world.
 
 #+BEGIN_SRC emacs-lisp
 (use-package elpy
+  :defer t
   :init
-  (elpy-enable)
+  (advice-add 'python-mode :before 'elpy-enable)
 (setq elpy-rpc-python-command "python3")
 (setq python-shell-interpreter "python3"
       python-shell-interpreter-args "-i"))
