Add C++ to lsp-mode

--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -165,6 +165,7 @@ Ever, if I ruled the world.
     (setq lsp-keymap-prefix "C-c l")
     :hook (;; replace XXX-mode with concrete major-mode(e. g. python-mode)
            (python-mode . lsp-deferred)
+           (c++-mode . lsp-deferred)
            ;; if you want which-key integration
            (lsp-mode . lsp-enable-which-key-integration))
     :commands lsp lsp-deferred)
