Add go and Scala modes

--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -166,6 +166,8 @@ Ever, if I ruled the world.
     :hook (;; replace XXX-mode with concrete major-mode(e. g. python-mode)
            (python-mode . lsp-deferred)
            (c++-mode . lsp-deferred)
+           (go-mode . lsp-deferred)
+           (scala-mode . lsp-deferred)
            ;; if you want which-key integration
            (lsp-mode . lsp-enable-which-key-integration))
     :commands lsp lsp-deferred)
